--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "axios": "^0.19.2",
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
+    "loadash": "^1.0.0",
     "mysql2": "^2.1.0",
     "require-directory": "^2.1.1",
     "sequelize": "^5.21.10",
