--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.0",
     "koa-bodyparser": "^4.3.0",
-    "koa-logger": "^3.2.1",
+    "koa-log4": "^2.3.2",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
     "loadash": "^1.0.0",
