--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa-log4": "^2.3.2",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
+    "koa2-cors": "^2.0.6",
     "loadash": "^1.0.0",
     "mysql2": "^2.1.0",
     "require-directory": "^2.1.1",
