--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mysql2": "^2.1.0",
     "require-directory": "^2.1.1",
     "sequelize": "^5.21.10",
-    "validator": "^13.0.0"
+    "validator": "^13.0.0",
+    "xlsx": "^0.16.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
