--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
+    "exceljs": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.0",
     "koa-bodyparser": "^4.3.0",
