--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mysql2": "^2.1.0",
     "require-directory": "^2.1.1",
     "sequelize": "^5.21.10",
-    "validator": "^13.0.0"
+    "validator": "^13.0.0",
+    "vue-count-to": "^1.0.13"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
