--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ node_modules/
 logs/
 /config/
 /temp/
+/public/
+/frontendcms/vue-admin-template/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
