--- a/frontendcms/vue-admin-template/.env.production
+++ b/frontendcms/vue-admin-template/.env.production
@@ -4,4 +4,6 @@ ENV = 'production'
 # base api
 # VUE_APP_BASE_API = '/prod-api'
 
-VUE_APP_BASE_API = 'http://39.104.20.22:3000/v1'
+# VUE_APP_BASE_API = 'http://39.104.20.22:3000/v1'
+
+VUE_APP_BASE_API = 'http://106.52.235.201:3000/v1'
