--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 node_modules/
 /dist/
 logs/
-/temp/uploadfile/
-/public/
+# /temp/uploadfile/
+# /public/
 /frontendcms/vue-admin-template/dist/
 npm-debug.log*
 yarn-debug.log*
