--- a/frontendcms/vue-admin-template/.env.production
+++ b/frontendcms/vue-admin-template/.env.production
@@ -4,6 +4,9 @@ ENV = 'production'
 # base api
 # VUE_APP_BASE_API = '/prod-api'
 
-# VUE_APP_BASE_API = 'http://39.104.20.22:3000/v1'
 
-VUE_APP_BASE_API = 'http://106.52.235.201:3000/v1'
+# qcloud
+# VUE_APP_BASE_API = 'http://106.52.235.201:3000/v1'
+
+# barea
+VUE_APP_BASE_API = 'http://130.71.44.227:3000/v1'
