20200928_001_deploy_barea_domain

--- a/frontendcms/vue-admin-template/.env.production
+++ b/frontendcms/vue-admin-template/.env.production
@@ -8,5 +8,8 @@ ENV = 'production'
 # qcloud
 # VUE_APP_BASE_API = 'http://106.52.235.201:3000/v1'
 
-# barea
-VUE_APP_BASE_API = 'http://130.71.44.227:3000/v1'
+# barea ipip
+# VUE_APP_BASE_API = 'http://130.71.44.227:3000/v1'
+
+# barea domain
+VUE_APP_BASE_API = 'http://cms.yic717univpn.pw/v1'
