20201225_fix_audit_frontend

--- a/frontendcms/vue-admin-template/.env.development
+++ b/frontendcms/vue-admin-template/.env.development
@@ -3,4 +3,6 @@ ENV = 'development'
 
 # base api
 # VUE_APP_BASE_API = '/dev-api'
+# VUE_APP_BASE_API = 'http://cms.yic717univpn.pw/v1'
 VUE_APP_BASE_API = 'http://127.0.0.1:3000/v1'
+
